       database.
     * ovn-trace now has basic support for tracing distributed firewalls.
     * In ovn-nbctl and ovn-sbctl, record UUIDs in commands may now be
       abbreviated to 4 hex digits.
     * "ovn-sbctl lflow-list" can now print OpenFlow flows that correspond
       to logical flows.
     * Now uses OVSDB RBAC support to reduce impact of compromised hypervisors.
   - OVSDB:
     * New support for role-based access control (see ovsdb-server(1)).
   - New commands 'stp/show' and 'rstp/show' (see ovs-vswitchd(8)).
   - OpenFlow:
     * All features required by OpenFlow 1.4 are now implemented, so
       ovs-vswitchd now enables OpenFlow 1.4 by default (in addition to
       OpenFlow 1.0 to 1.3).
     * Increased support for OpenFlow 1.6 (draft).
     * Bundles now support hashing by just nw_src or nw_dst.
     * The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
     * The port status bit OFPPS_LIVE now reflects link aliveness.
     * OpenFlow 1.5 packet-out is now supported.
   - Fedora Packaging:
     * OVN services are no longer restarted automatically after upgrade.
   - Add --cleanup option to command 'ovs-appctl exit' (see ovs-vswitchd(8)).
   - L3 tunneling:
     * Use new tunnel port option "packet_type" to configure L2 vs. L3.
     * New vxlan tunnel extension "gpe" to support VXLAN-GPE tunnels.
     * New support for non-Ethernet (L3) payloads in GRE and VXLAN-GPE.
   - The BFD detection multiplier is now user-configurable.
   - Add experimental support for hardware offloading
     * HW offloading is disabled by default.
     * HW offloading is done through the TC interface.

v2.7.0 - 21 Feb 2017
---------------------
   - Utilities and daemons that support SSL now allow protocols and
     ciphers to be configured with --ssl-protocols and --ssl-ciphers.
   - OVN:
     * QoS is now implemented via egress shaping rather than ingress policing.
     * DSCP marking is now supported, via the new northbound QoS table.