@@ -45,6 +45,7 @@ Post-v2.7.0
      * "ovn-sbctl lflow-list" can now print OpenFlow flows that correspond
        to logical flows.
      * Now uses OVSDB RBAC support to reduce impact of compromised hypervisors.
+   - Tracing with ofproto/trace now traces through recirculation.
    - OVSDB:
      * New support for role-based access control (see ovsdb-server(1)).
    - New commands 'stp/show' and 'rstp/show' (see ovs-vswitchd(8)).
